--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,6 @@ cmake-build-*/
 out/
 third_party/
 
-
 # Visual Studio 2022 cache/options directory
 .vs/
 *.user
@@ -82,6 +81,23 @@ bld/
 *.out
 *.app
 
+# CEF specific files and directories
+third_party/cef/
+cef_binary_*/
+libcef_dll_wrapper/
+cef_cache/
+cef_resources/
+locales/
+*.pak
+*.dat
+chrome_elf.dll
+d3dcompiler_47.dll
+libcef.dll
+libEGL.dll
+libGLESv2.dll
+vk_swiftshader.dll
+vulkan-1.dll
+
 # Generated sources
 WebView2*
 
@@ -113,3 +129,8 @@ Desktop.ini
 # Project specific
 Nexile.dir/
 Nexile_autogen/
+
+# CEF user data and cache
+cef_cache/
+cef_user_data/
+debug.log
